# Practicum_CPlusPlus

./: .gitignore
BoostAsio/: BoostAsio.slnx
BoostAsio/BoostAsio/: main.cpp
BoostAsioWin/: BoostAsioWin.slnx
BoostAsioWin/BoostAsioWin/: BoostAsioWin.cpp
Builder/Builder/: Builder.cpp
JSON Builder/Lesson 6-1/: json.cpp  json_builder.cpp  json_builder.h  main.cpp  main.h
Optional/Optional/: main.cpp  optional.h
SpherePrj/SphereProjector/: SphereProjector.cpp  geo.h  json.cpp  svg.cpp  svg.h
SpreadSheet/SpreadSheet/: CMakeLists.txt  structures.cpp
Transport_Directory/Transport_Directory/: domain.cpp  domain.h  geo.cpp  geo.h  graph.h  input_reader.cpp  input_reader.h  json.cpp  json.h  json_builder.cpp  json_builder.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  ranges.h  request_handler.cpp  request_handler.h  router.h  stat_reader.cpp  stat_reader.h  svg.cpp  svg.h  transport_catalogue.cpp  transport_catalogue.h  transport_router.cpp  transport_router.h
Vector/Vector/: main.cpp  vector.h
adds/: CMakeLists.cmake  Несколько команд git.txt
final 1/: calculator.cpp  calculator.h
pBudget/pBudget/: budget_manager.cpp  budget_manager.h  main.cpp  parser.cpp  parser.h
qt_prj/ImageProject/: mywindowwithimage.cpp  mywindowwithimage.h  mywindowwithimage.ui
qt_prj/MyFirstProject/: mywindow.cpp  mywindow.ui
qt_prj/Seasons/: mainwindow.ui
qt_prj/project_with_resource/: mainwindow.cpp  mainwindow.h  mainwindow.ui  project_with_resource.pro
sprint 17/AsioRobot/: CMakeLists.txt
sprint 17/SimplestHTTPServer/: CMakeLists.txt  conanfile.txt
sprint 17/SimplestHTTPServer/src/: main.cpp
sprint 17/TCP_UDP_Practice/: CMakeLists.txt
sprint 17/WebServer/: CMakeLists.txt
sprint 17/WebServer/src/: main.cpp
sprint 17/hello/: CMakeLists.txt  conanfile.txt
sprint 17/hello/src/: main.cpp
sprint 17/tmplt/: Boost проект.md  CMakeLists.txt
sprint 2/final 1/: calculator.cpp  calculator.h  calculator_ui.cpp  calculator_ui.h  main.cpp
sprint 2/lesson_9_12/: mainwindow.cpp  mainwindow.h  mainwindow.ui
sprint 4/: autocomplete.h  bitmap.h  check_anagram.h  count_unique.h  duplicated_values.h  event_counter.h  fibonacci.h  guests_list.h  merge.h  note_storage.h  recipe_book.h  stack.cpp  sum_tree.h  widespread_bird.h
(+306 files in other folders)
